fix vertical scrollbar

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -196,3 +196,8 @@ ui bootstrap tweaks
 .main-content {
   background-color: #f7f7f7;
 }
+
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
